<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="favorite">Favorite</string>
    <string name="movieandtvshow"><![CDATA[Movie & Tv Show]]></string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tv_show">Tv Show</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release">Movie release date</string>
    <string name="vote">Rating</string>
    <string name="tvshow_title">Tv Show Title</string>
    <string name="tvshow_date">Release Date</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="change_language_settings">Change Language</string>
    <string name="success">Added to favorites</string>
    <string name="failed">Failed to add to favorites</string>
    <string name="removed">Removed from favorites</string>
    <string name="nodata">There is no data at the moment</string>
    <string name="search">Search</string>
    <string name="search_hint">Search here...</string>
    <string name="aboutmovies">About Movies</string>
    <string name="abouttvshow">About Tv Show</string>
    <string name="appwidget_text">Your Favorite Movies</string>
    <string name="empty_text">Empty Movie</string>
    <string name="change_language">Change application language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="reminder_for_return_to_app">Reminder for return to app</string>
    <string name="reminder_released_today">Reminder showing the movie that released today</string>
    <string name="settings">Settings</string>

    <string name="content_title">Content title</string>
    <string name="content_text">Content text</string>
    <string name="subtext">Hi! How are you?</string>
    <string name="notif_mssg">We miss you ❤</string>
    <string name="daily_reminder_off">Daily reminder turned off :(</string>
    <string name="daily_reminder_on">Daily reminder turned on ❤</string>
    <string name="release_msg">is release today</string>
    <string name="release_reminder_off">Release reminder turned off</string>
    <string name="release_reminder_on">Release reminder turned on</string>
</resources>
