<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <LinearLayout
        android:id="@+id/ll_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/change_language_settings"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="8dp"
            android:text="@string/change_language" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorStrip" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_change_language" />

    <TextView
        android:id="@+id/tv_daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reminder_for_return_to_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_daily" />

    <View
        android:id="@+id/view_stripDaily"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorStrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_reminder" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/release_reminder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_stripDaily" />

    <TextView
        android:id="@+id/tv_release_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reminder_released_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_release" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorStrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_reminder" />


</androidx.constraintlayout.widget.ConstraintLayout>